# paper_to_code

./: README.md  pyproject.toml  report.md
src/paper_to_code/: crew.py  main.py
src/paper_to_code/config/: agents.yaml  tasks.yaml
